--- a/src/html/style.css
+++ b/src/html/style.css
@@ -29,13 +29,7 @@
 	--dark: rgb(31, 31, 31);
 	--white: rgb(255, 255, 255);
 
-	--dark-blurple-gradient: radial-gradient(
-		105.43% 127.05% at 50.1% 127.05%,
-		var(--blurple) 20.65%,
-		var(--dark-blurple) 85.16%
-	);
-
-	--gradient-dark: light-dark(var(--light-blurple), var(--dark-blurple));
+	--gradient-dark: var(--dark-blurple);
 	--gradient-light: var(--blurple);
 }
 
@@ -46,7 +40,11 @@ html {
 }
 
 body {
-	background: var(--dark-blurple-gradient);
+	background: radial-gradient(
+		105.43% 127.05% at 50.1% 127.05%,
+		var(--blurple) 20.65%,
+		var(--dark-blurple) 85.16%
+	);
 	background-attachment: fixed;
 }
 
