--- a/src/html/style.css
+++ b/src/html/style.css
@@ -75,12 +75,9 @@
 	--space-xxl: 40px;
 }
 
-html {
+body {
 	font-family:
 		"gg sans", "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-body {
 	background: radial-gradient(
 		105.43% 127.05% at 50.1% 127.05%,
 		var(--blurple) 20.65%,
@@ -108,21 +105,20 @@ p {
 	gap: var(--space-sm);
 	border: 1px solid
 		light-dark(var(--light-card-border), var(--dark-card-border));
+	max-width: 400px;
 }
 
-.user {
+.username {
 	font-weight: var(--font-weight-medium);
 	display: flex;
-	flex-direction: row;
 	align-items: center;
 	color: light-dark(var(--light-text-user), var(--dark-text-user));
 }
 
 .tag {
-	font-size: 12px;
+	font-size: 0.75rem;
 	display: flex;
 	font-weight: var(--font-weight-semibold);
-	flex-direction: row;
 	align-items: center;
 	background-color: var(--tag-color);
 	border-radius: var(--radius-xs);
@@ -138,12 +134,18 @@ p {
 
 .timestamp {
 	color: light-dark(var(--light-timestamp-color), var(--dark-timestamp-color));
-	font-size: 12px;
+	font-size: 0.75rem;
 	margin: 0 var(--space-xxs);
 }
 
 .message {
 	color: light-dark(var(--light-text-message), var(--dark-text-message));
+}
+
+.message img {
+	max-width: 100%;
+	border-radius: var(--radius-sm);
+	margin-top: var(--space-xxs);
 }
 
 .avatar {
