--- a/src/html/style.css
+++ b/src/html/style.css
@@ -11,23 +11,18 @@
 	color-scheme: light dark;
 
 	/* Colors */
-	--light-text-user: rgb(50, 51, 56);
-	--light-text-message: rgb(47, 48, 53);
-
-	--dark-text-user: rgb(255, 255, 255);
-	--dark-text-message: rgb(223, 224, 226);
-
-	--light-card: rgb(255, 255, 255);
-	--dark-card: rgb(57, 58, 65);
-
-	--light-card-border: rgb(226, 226, 228);
-	--dark-card-border: rgb(68, 69, 76);
-
-	--light-card-shadow: 0 12px 36px 0 hsl(none 0% 0% / 0.12);
-	--dark-card-shadow: 0 12px 24px 0 hsl(none 0% 0% / 0.24);
-
-	--light-timestamp-color: rgb(112, 113, 122);
-	--dark-timestamp-color: rgb(155, 156, 163);
+	--text-user: light-dark(rgb(50, 51, 56), rgb(255, 255, 255));
+	--text-message: light-dark(rgb(47, 48, 53), rgb(223, 224, 226));
+	--card-background: light-dark(rgb(255, 255, 255), rgb(57, 58, 65));
+	--card-border: light-dark(
+		1px solid rgb(226, 226, 228),
+		1px solid rgb(68, 69, 76)
+	);
+	--card-shadow: light-dark(
+		0 12px 36px 0 hsl(none 0% 0% / 0.12),
+		0 12px 24px 0 hsl(none 0% 0% / 0.24)
+	);
+	--timestamp-color: light-dark(rgb(112, 113, 122), rgb(155, 156, 163));
 
 	--tag-color: rgba(151, 151, 159, 0.2);
 
@@ -94,16 +89,15 @@ p {
 }
 
 .card {
-	box-shadow: light-dark(var(--light-card-shadow), var(--dark-card-shadow));
-	background-color: light-dark(var(--light-card), var(--dark-card));
+	box-shadow: var(--card-shadow);
+	background-color: var(--card-background);
 	border-radius: var(--radius-sm);
 	padding: var(--space-sm);
 	padding-right: var(--space-xl);
 	display: flex;
 	align-items: flex-start;
 	gap: var(--space-sm);
-	border: 1px solid
-		light-dark(var(--light-card-border), var(--dark-card-border));
+	border: var(--card-border);
 	max-width: 400px;
 }
 
@@ -111,7 +105,7 @@ p {
 	font-weight: var(--font-weight-medium);
 	display: flex;
 	align-items: center;
-	color: light-dark(var(--light-text-user), var(--dark-text-user));
+	color: var(--text-user);
 }
 
 .tag {
@@ -132,13 +126,13 @@ p {
 }
 
 .timestamp {
-	color: light-dark(var(--light-timestamp-color), var(--dark-timestamp-color));
+	color: var(--timestamp-color);
 	font-size: 0.75rem;
 	margin: 0 var(--space-xxs);
 }
 
 .message {
-	color: light-dark(var(--light-text-message), var(--dark-text-message));
+	color: var(--text-message);
 }
 
 .message img {
