--- a/src/html/style.css
+++ b/src/html/style.css
@@ -91,7 +91,6 @@ p {
 	border-radius: var(--radius-sm);
 	padding: var(--space-sm);
 	display: flex;
-	align-items: flex-start;
 	gap: var(--space-sm);
 	border: var(--card-border);
 	word-break: break-word;
@@ -107,12 +106,13 @@ p {
 .username {
 	font-weight: var(--font-weight-medium);
 	display: flex;
+	flex-wrap: wrap;
 	align-items: center;
 	color: var(--text-user);
+	gap: var(--space-xxs);
 
 	& :not(:first-child) {
 		font-size: 0.75rem;
-		margin: 0 var(--space-xxs);
 	}
 }
 
@@ -122,11 +122,12 @@ p {
 	align-items: center;
 	background-color: var(--tag-color);
 	border-radius: var(--radius-xs);
+	gap: var(--space-xxs);
+	padding: 0 var(--space-xxs);
 
 	& img {
 		width: 12px;
 		height: 12px;
-		margin-left: var(--space-xxs);
 	}
 }
 
