Improve username hierarchy
Signed-off-by: Ryan Luu <ryan.luu@ryanluu.dev>

--- a/src/html/style.css
+++ b/src/html/style.css
@@ -98,7 +98,7 @@ html {
 	color: var(--username-color);
 	gap: var(--space-xxs);
 
-	& > :not(:first-child) {
+	& > * {
 		font-size: 0.75rem;
 	}
 }
