--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,23 @@
 @font-face {
 	font-family: "gg sans";
-	src: url("fonts/ggsansvf-VF.woff2") format("woff2-variations");
-	font-weight: 125 950;
 	font-stretch: 75% 125%;
-
 	font-style: normal;
+	font-weight: 125 950;
+	src: url("fonts/ggsansvf-VF.woff2") format("woff2-variations");
+}
+
+@font-face {
+	font-family: "gg mono";
+	font-style: normal;
+	font-weight: 400;
+	src: url("fonts/ggsansmono-Normal.woff2") format("woff2");
+}
+
+@font-face {
+	font-family: "gg mono";
+	font-style: normal;
+	font-weight: 700;
+	src: url("fonts/ggsansmono-Bold.woff2") format("woff2");
 }
 
 :root {
