--- a/public/style.css
+++ b/public/style.css
@@ -78,7 +78,7 @@ html {
 	background-color: var(--card-background-color);
 	border: var(--card-border);
 	border-radius: var(--radius-sm);
-	box-shadow: var(--card-shadow);
+	/* box-shadow: var(--card-shadow); */
 }
 
 .avatar {
