--- a/public/style.css
+++ b/public/style.css
@@ -33,6 +33,8 @@
 	--background-spoiler: rgba(151, 151, 159, 0.08);
 	--background-code: light-dark(rgb(244, 245, 250), rgb(53, 55, 72));
 	--background-mod-strong: rgba(151, 151, 159, 0.2);
+	--mention-background: rgb(59, 63, 101);
+	--mention-foreground: rgb(206, 215, 255);
 	--spine-default: light-dark(rgb(203, 203, 207), rgb(94, 95, 102));
 
 	--text-primary: light-dark(rgb(50, 51, 56), rgb(255, 255, 255));
@@ -208,8 +210,16 @@ blockquote {
 .message {
 	color: var(--text-default);
 
-	& span {
+	& .spoiler {
 		background-color: var(--background-spoiler);
+		border-radius: var(--radius-xs);
+	}
+
+	& .mention {
+		padding: 0 2px;
+		font-weight: var(--font-weight-medium);
+		color: var(--mention-foreground);
+		background-color: var(--mention-background);
 		border-radius: var(--radius-xs);
 	}
 
