--- a/public/style.css
+++ b/public/style.css
@@ -65,8 +65,6 @@
 	--font-weight-bold: 700;
 	--font-weight-extrabold: 800;
 
-	--custom-emoji-size-emoji: 1.375em;
-
 	--radius-none: 0px;
 	--radius-xs: 4px;
 	--radius-sm: 8px;
@@ -151,17 +149,12 @@ html {
 		border-left: 4px solid var(--spine-default);
 	}
 
-	& .emoji {
-		width: var(--custom-emoji-size-emoji);
-		height: var(--custom-emoji-size-emoji);
-	}
-
-	& .spoiler {
+	& span.spoiler {
 		background-color: var(--background-spoiler);
 		border-radius: var(--radius-xs);
 	}
 
-	& .mention {
+	& span.mention {
 		padding: 0 2px;
 		font-weight: var(--font-weight-medium);
 		color: var(--mention-foreground);
@@ -169,7 +162,14 @@ html {
 		border-radius: var(--radius-xs);
 	}
 
-	& .attachment {
+	& img.emoji {
+		width: 1.375em;
+		height: 1.375em;
+		margin: 0 0.05em 0 0.1em;
+		vertical-align: -0.375em;
+	}
+
+	& img.attachment {
 		display: block;
 		max-width: 100%;
 		margin-top: var(--space-xxs);
