--- a/public/style.css
+++ b/public/style.css
@@ -89,7 +89,7 @@ html {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	height: 100%;
+	min-height: 100vh;
 	font-family: var(--font-primary);
 	background: radial-gradient(
 		105.43% 127.05% at 50.1% 127.05%,
